Update to version 45